# django-languages-plus

./: .travis.yml  pyproject.toml  setup.cfg  tox.ini
languages_plus/: __init__.py
