[tool.poetry]
name = "django-languages-plus"
version = "1.1.2"
description = "A django model & fixture containing common languages and culture codes"
authors = ["Andrew Cordery <cordery@gmail.com>"]
license = "MIT"
readme = "README.rst"
include = ["LICENSE", "*.rst", "*.md"]
packages = [
    {include = "languages_plus"}
]
homepage = "https://github.com/cordery/django-languages-plus"
repository = "https://github.com/cordery/django-languages-plus"
keywords = ["django-languages-plus"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
django = [
    {version = ">=2", python = "^3.6"}
]
django-countries-plus = "^2.1"

[tool.poetry.dev-dependencies]
coverage = "*"
codecov = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
bumpversion = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
